# sm-analyze-stats

./: CHQ ITG Statistics.xlsx  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  analysis.py  analyzers.py  available.csv  constants.py  getavailablesongs.py  main.ipynb  main.py  modify_stats.py  notebook.ipynb  output.xlsx  parse_upload_folder.py  pyproject.toml  requirements.txt  table_stats.py  temp.xlsx  template.xlsx  template2.xlsx  upload.json
